tests/ui/indexing/index-help.stderr
error[E0277]: the type `[{integer}]` cannot be indexed by `i32`
  --> $DIR/index-help.rs:3:7
   |
LL |     x[0i32];
   |       ^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[{integer}]>` is not implemented for `i32`
help: the following other types implement trait `SliceIndex<T>`
  --> $SRC_DIR/core/src/slice/index.rs:LL:COL
   |
   = note: `usize` implements `SliceIndex<[T]>`
  --> $SRC_DIR/core/src/bstr/traits.rs:LL:COL
   |
   = note: `usize` implements `SliceIndex<ByteStr>`
   = note: required for `Vec<{integer}>` to implement `Index<i32>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
